--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			navigator.geolocation.getCurrentPosition(function(location) {
 				document.getElementById("latitude").innerText = location.coords.latitude
 
-				document.getElementById("longitude").innerText = location.coords.latitude
+				document.getElementById("longitude").innerText = location.coords.longitude
 
 				document.getElementById("accuracy").innerText = location.coords.accuracy
 
