--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	  			console.log(location.coords.longitude);
 	  			console.log(location.coords.accuracy);
 
-			}, {enableHighAccuracy: true});
+			},function(error){alert(error)}, {enableHighAccuracy: true});
 		})
 
 
