--- a/index.html
+++ b/index.html
@@ -1,46 +1,26 @@
-<html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<style>
-		
+<html lang="en">
+  <head>
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="478001771313-08pjibi3pl834r34sl4d4rcv3kd6cufo.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+  </head>
+  <body>
+    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+    <script>
+      function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
 
-
-
-	</style>
-</head>
-<body>
-	<button id="clickme">Click</button>
-	<p id="latitude"></p>
-	<p id="longitude"></p>
-	<p id="accuracy"></p>
-
-
-
-
-
-
-</body>
-<footer>
-	<script>
-		document.getElementById("clickme").addEventListener("click", function(){
-			navigator.geolocation.getCurrentPosition(function(location) {
-				document.getElementById("latitude").innerText = location.coords.latitude
-
-				document.getElementById("longitude").innerText = location.coords.longitude
-
-				document.getElementById("accuracy").innerText = location.coords.accuracy
-
-	  			console.log(location.coords.latitude);
-	  			console.log(location.coords.longitude);
-	  			console.log(location.coords.accuracy);
-
-			},function(error){alert(error)}, {enableHighAccuracy: true});
-		})
-
-
-
-	</script>
-</footer>
-
-
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+      }
+    </script>
+  </body>
 </html>
