--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="478001771313-08pjibi3pl834r34sl4d4rcv3kd6cufo.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
