--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <script>
+      let key
       function onSignIn(googleUser) {
         // Useful data for your client-side scripts:
         var profile = googleUser.getBasicProfile();
@@ -20,6 +21,7 @@
 
         // The ID token you need to pass to your backend:
         var id_token = googleUser.getAuthResponse().id_token;
+        key = id_token
         console.log("ID Token: " + id_token);
       }
     </script>
