--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+    <button id="sign-out" onclick="signOut">Sign Out</button>
     <script>
       let key
       function onSignIn(googleUser) {
@@ -23,6 +24,13 @@
         var id_token = googleUser.getAuthResponse().id_token;
         key = id_token
         console.log("ID Token: " + id_token);
+      }
+
+      function signOut(){
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+          console.log('User signed out.');
+        });
       }
     </script>
   </body>
