--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-    <button id="sign-out" onclick="signOut">Sign Out</button>
+    <button id="sign-out" onclick="signOut()">Sign Out</button>
     <script>
       let key
       function onSignIn(googleUser) {
