--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
       }
 
       #sign-out {
@@ -61,6 +62,7 @@
         auth2.signOut().then(function () {
           console.log('User signed out.');
           document.getElementById("sign-in").style.display = "flex"
+          document.getElementById("sign-out").style.display = "none"
         });
       }
     </script>
