--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           console.log('User signed out.');
           document.getElementById("sign-in").style.display = "flex"
           document.getElementById("sign-out").style.display = "none"
+          document.getElementById("profile-image").innerHTML = ""
         });
       }
     </script>
