--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           document.getElementById("sign-in").style.display = "flex"
           document.getElementById("sign-out").style.display = "none"
           document.getElementById("profile-image").innerHTML = ""
+          document.getElementById("email").innerText = ""
         });
       }
     </script>
