--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <body>
     <div id="sign-in" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <button id="sign-out" onclick="signOut()">Sign Out</button>
+    <p id="message"></p>
     <div id="profile-image"></div>
     <p id="email"></p>
     <script>
@@ -47,16 +48,46 @@
         console.log('Given Name: ' + profile.getGivenName());
         console.log('Family Name: ' + profile.getFamilyName());
         console.log("Image URL: " + profile.getImageUrl());
-        document.getElementById("profile-image").innerHTML = `<img src='${profile.getImageUrl()}'></img>`
         console.log("Email: " + profile.getEmail());
-        document.getElementById("email").innerText = profile.getEmail()
+
+        let email = profile.getEmail()
+        let name = profile.getName()
 
         // The ID token you need to pass to your backend:
         var id_token = googleUser.getAuthResponse().id_token;
         key = id_token
         console.log("ID Token: " + id_token);
-        document.getElementById("sign-out").style.display = "flex"
-        document.getElementById("sign-in").style.display = "none"
+
+        https://golfingapi.herokuapp.com/
+
+        let configurationObject = {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+              "Accept": "application/json"
+            },
+            body: JSON.stringify({
+                name: `${name}`,
+                email: `${email}`,
+                key: `${key}`
+            })
+        }
+
+        fetch("https://golfingapi.herokuapp.com/signin", configurationObject)
+            .then(function(response){
+                return response.json()
+            })
+            .then(function(object){
+                document.getElementById("message").innerText = object.message
+                document.getElementById("sign-out").style.display = "flex"
+                document.getElementById("sign-in").style.display = "none"
+                document.getElementById("profile-image").innerHTML = `<img src='${profile.getImageUrl()}'></img>`
+                document.getElementById("email").innerText = profile.getEmail()
+            })
+            .catch(function(error){
+                console.log(error)
+                alert("error")
+            })
       }
 
       function signOut(){
@@ -67,6 +98,7 @@
           document.getElementById("sign-out").style.display = "none"
           document.getElementById("profile-image").innerHTML = ""
           document.getElementById("email").innerText = ""
+          document.getElementById("message").innerText = ""
         });
       }
     </script>
