--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
       <p>Add Course</p>
     </div>
     <div id="create-course-box">
-      <h1>Create Course</h1>
-      
+      <input id="course-name" type="text" placeholder="Course name">
+      <input id="course-hole-count" type="text" placeholder="Hole count">
+      <div id="Setup holes"><p>setup holes</p></div>
+
     </div>
     <script>
       let key
