--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     </div>
     <div id="create-course-box">
       <input id="course-name" type="text" placeholder="Course name">
+      <input id="sub-course-name" type="text" placeholder="Course sub-name">
       <input id="course-hole-count" type="text" placeholder="Hole count">
-      <div id="Setup holes"><p>setup holes</p></div>
+      <div id="Setup holes"><p>setup holes +</p></div>
 
     </div>
     <script>
