namechang setup holes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <input id="course-name" type="text" placeholder="Course name">
       <input id="sub-course-name" type="text" placeholder="Course sub-name">
       <input id="course-hole-count" type="text" placeholder="Hole count">
-      <div id="Setup holes"><p>setup holes +</p></div>
+      <div id="setup-holes"><p>setup holes +</p></div>
 
     </div>
     <script>
