flex on setupholes

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
           document.getElementById("profile-image").innerHTML = ""
           document.getElementById("email").innerText = ""
           document.getElementById("message").innerText = ""
+          document.getElementById("create-course").style.display = "none"
         });
       }
     </script>
