--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
       <div id="setup-holes"><p>setup holes +</p></div>
 
     </div>
+    <div id="submit-course">
+      <p>Submit</p>
+    </div>
     <script>
       let key
       function onSignIn(googleUser) {
