--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <div id="courses">
 
     </div>
+    <div id="play">
+      
+    </div>
     <script src="./courses.js"></script>
     <script>
       let key
