--- a/courses.html
+++ b/courses.html
@@ -13,6 +13,23 @@
         align-items: center;
       }
 
+      div#content {
+          display: flex;
+          height: 80%;
+          width: 100%;
+          flex-direction: column;
+          justify-content: center;
+      }
+
+      div#bottom {
+          display: flex;
+          height: 20%;
+          width: 100%;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+      }
+
       #sign-out {
         display: none;
       }
@@ -24,8 +41,8 @@
 
       #profile-image {
         display: flex;
-        height: 100px;
-        width: 100px;
+        height: 50px;
+        width: 50px;
         justify-content: center;
         align-items: center;
         overflow: hidden;
@@ -33,11 +50,16 @@
     </style>
   </head>
   <body>
-    <div id="sign-in" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-    <button id="sign-out" onclick="signOut()">Sign Out</button>
-    <p id="message"></p>
-    <div id="profile-image"></div>
-    <p id="email"></p>
+    <div id="content">
+
+    </div>
+    <div id="bottom">
+        <div id="sign-in" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+        <button id="sign-out" onclick="signOut()">Sign Out</button>
+        <p id="message"></p>
+        <div id="profile-image"></div>
+        <p id="email"></p>
+    </div>
     
     <script>
       let key
