--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     </style>
   </head>
   <body>
+    <div id="content">
+      
+    </div>
     <div id="sign-in" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <button id="sign-out" onclick="signOut()">Sign Out</button>
     <p id="message"></p>
