--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
   </head>
   <body>
     <div id="content">
-      
+
     </div>
-    <div id="sign-in" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-    <button id="sign-out" onclick="signOut()">Sign Out</button>
-    <p id="message"></p>
-    <div id="profile-image"></div>
-    <p id="email"></p>
+    <div id="bottom">
+        <div id="sign-in" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+        <button id="sign-out" onclick="signOut()">Sign Out</button>
+        <p id="message"></p>
+        <div id="profile-image"></div>
+        <p id="email"></p>
+    </div>
     
     <script>
       let key
