--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
         align-items: center;
       }
 
+      div#content {
+          display: flex;
+          height: 80%;
+          width: 100%;
+          flex-direction: column;
+          justify-content: center;
+      }
+
+      div#bottom {
+          display: flex;
+          height: 20%;
+          width: 100%;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+      }
+
       #sign-out {
         display: none;
       }
