--- a/round.html
+++ b/round.html
@@ -4,12 +4,30 @@
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="478001771313-08pjibi3pl834r34sl4d4rcv3kd6cufo.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <link rel="stylesheet" href="./style.css">
     <style>
       body {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+      }
+
+      div#content {
+          display: flex;
+          height: 80%;
+          width: 100%;
+          flex-direction: column;
+          justify-content: center;
+      }
+
+      div#bottom {
+          display: flex;
+          height: 20%;
+          width: 100%;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
       }
 
       #sign-out {
@@ -23,21 +41,29 @@
 
       #profile-image {
         display: flex;
-        height: 100px;
-        width: 100px;
+        height: 50px;
+        width: 50px;
         justify-content: center;
         align-items: center;
         overflow: hidden;
       }
+
+      #test {
+          
+      }
     </style>
   </head>
   <body>
-    <div id="sign-in" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-    <button id="sign-out" onclick="signOut()">Sign Out</button>
-    <p id="message"></p>
-    <div id="profile-image"></div>
-    <p id="email"></p>
-    <a id="round" href="./round.html" style="display: hidden;"></a>
+    <div id="content">
+
+    </div>
+    <div id="bottom">
+        <div id="sign-in" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+        <button id="sign-out" onclick="signOut()">Sign Out</button>
+        <p id="message"></p>
+        <div id="profile-image"></div>
+        <p id="email"></p>
+    </div>
     
     <script>
       let key
@@ -82,8 +108,6 @@
                 document.getElementById("sign-in").style.display = "none"
                 document.getElementById("profile-image").innerHTML = `<img src='${profile.getImageUrl()}'></img>`
                 document.getElementById("email").innerText = profile.getEmail()
-                document.getElementById("round").click()
-
             })
             .catch(function(error){
                 console.log(error)
