--- a/round.html
+++ b/round.html
@@ -25,7 +25,7 @@
           display: flex;
           height: 20%;
           width: 100%;
-          flex-direction: row;
+          flex-direction: column;
           justify-content: center;
           align-items: center;
       }
@@ -48,8 +48,15 @@
         overflow: hidden;
       }
 
-      #test {
-          
+      #profile {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+      }
+
+      #profile-image {
+          margin-right: 10px;
       }
     </style>
   </head>
@@ -58,10 +65,13 @@
 
     </div>
     <div id="bottom">
+        <div id="profile">
+            <div id="profile-image"></div>
+            <p id="email"></p>
+        </div>
+        <div id="signout"></div>
         <div id="sign-in" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
         <button id="sign-out" onclick="signOut()">Sign Out</button>
-        <div id="profile-image"></div>
-        <p id="email"></p>
     </div>
     
     <script>
