--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </style>
   </head>
   <body>
+    <h1>Welcome to the Golf App</h1>
     <div id="sign-in" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <button id="sign-out" onclick="signOut()">Sign Out</button>
     <p id="message"></p>
