--- a/round.html
+++ b/round.html
@@ -62,7 +62,9 @@
   </head>
   <body>
     <div id="content">
-
+        <h2>Configure Your Round</h2>
+        <select id="course-dropdown" name="course">adasd</select>
+        <select id="tee-dropdown" name="tees"></select>
     </div>
     <div id="bottom">
         <div id="profile">
