--- a/round.html
+++ b/round.html
@@ -18,7 +18,7 @@
           height: 80%;
           width: 100%;
           flex-direction: column;
-          justify-content: center;
+          align-items: center;
       }
 
       div#bottom {
@@ -65,6 +65,10 @@
         <h2>Configure Your Round</h2>
         <select id="course-dropdown" name="course">adasd</select>
         <select id="tee-dropdown" name="tees"></select>
+        <label for="pin-locations">Pin Location</label>
+        <select id="pin-location-dropdown" name="pin-locations">
+          
+        </select>
     </div>
     <div id="bottom">
         <div id="profile">
@@ -138,6 +142,6 @@
     </script>
   </body>
   <footer>
-    
+    <script src="./selector.js"></script>
   </footer>
 </html>
