--- a/round.html
+++ b/round.html
@@ -69,6 +69,7 @@
           
         </select>
         <button id="start">Start Round</button>
+        <a id="start-a" href=""></a>
     </div>
     <div id="bottom">
         <div id="profile">
