--- a/play.html
+++ b/play.html
@@ -62,6 +62,7 @@
   </head>
   <body>
     <div id="content">
+        <h2 id="course-name">Course Name</h2>
         <h2 id="title">Hole</h2>
         <h3 id="info"></h3>
         <input id="club" type="text" placeholder="club selection">
