--- a/play.html
+++ b/play.html
@@ -72,7 +72,7 @@
         <h4 id="shot">Shot 1</h4>
         <input id="club" type="text" placeholder="club selection">
         <button id="shoot">Log Shot</button>
-        <a id="finish" href="" onclick="confirm()">Finish Hole</a>
+        <a id="finish" href="" onclick="return confirm('are you sure?')">Finish Hole</a>
     </div>
     <div id="bottom">
         <div id="profile">
