--- a/play.html
+++ b/play.html
@@ -72,6 +72,8 @@
         <h4 id="shot">Shot 1</h4>
         <input id="club" type="text" placeholder="club selection">
         <button id="shoot">Log Shot</button>
+        <p>Score (can change manually): </p>
+        <input id="score" type="number">
         <a id="finish" href="" onclick="return confirm('are you sure?')">Finish Hole</a>
     </div>
     <div id="bottom">
