--- a/play.html
+++ b/play.html
@@ -62,6 +62,10 @@
       button {
           margin: 10px;
       }
+
+      a {
+          margin: 5px;
+      }
     </style>
   </head>
   <body>
@@ -72,7 +76,7 @@
         <h4 id="shot">Shot 1</h4>
         <input id="club" type="text" placeholder="club selection">
         <button id="shoot">Log Shot</button>
-        <p>Score (can change manually): </p>
+        <p>Strokes (can change manually): </p>
         <input id="score" type="number">
         <a id="finish" href="" onclick="return confirm('are you sure?')">Finish Hole</a>
     </div>
