--- a/play.html
+++ b/play.html
@@ -77,7 +77,7 @@
         <input id="club" type="text" placeholder="club selection">
         <button id="shoot">Log Shot</button>
         <p>Strokes (can change manually): </p>
-        <input id="score" type="number">
+        <input id="score" type="number" value="0">
         <a id="finish" href="" onclick="return confirm('are you sure?')">Finish Hole</a>
     </div>
     <div id="bottom">
