finish button visible

--- a/play.html
+++ b/play.html
@@ -78,7 +78,8 @@
         <button id="shoot">Log Shot</button>
         <p>Strokes (can change manually): </p>
         <input id="score" type="number" value="0">
-        <a id="finish" href="" onclick="return confirm('are you sure?')">Finish Hole</a>
+        <button id="visible-finish" onclick="return confirm('are you sure?')">Finish Hole</button>
+        <a id="finish" href="" style="display: hidden;">Finish Hole</a>
     </div>
     <div id="bottom">
         <div id="profile">
