--- a/play.html
+++ b/play.html
@@ -79,7 +79,7 @@
         <p>Strokes (can change manually): </p>
         <input id="score" type="number" value="0">
         <button id="visible-finish" onclick="return confirm('are you sure?')">Finish Hole</button>
-        <a id="finish" href="" style="display: hidden;">Finish Hole</a>
+        <a id="finish" href="" style="display: none;">Finish Hole</a>
     </div>
     <div id="bottom">
         <div id="profile">
