--- a/play.html
+++ b/play.html
@@ -77,7 +77,7 @@
         <input id="club" type="text" placeholder="club selection">
         <button id="shoot">Log Shot</button>
         <p>Strokes (can change manually): </p>
-        <input id="score" type="number" value="0">
+        <input id="strokes" type="number" value="0">
         <button id="visible-finish" onclick="return confirm('are you sure?')">Finish Hole</button>
         <a id="finish" href="" style="display: none;">Finish Hole</a>
     </div>
