--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         // The ID token you need to pass to your backend:
         var id_token = googleUser.getAuthResponse().id_token;
         key = id_token
+        window.localStorage.setItem("key", key)
         console.log("ID Token: " + id_token);
 
         let configurationObject = {
