--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
           document.getElementById("profile-image").innerHTML = ""
           document.getElementById("email").innerText = ""
           document.getElementById("message").innerText = ""
+          window.localStorage.removeItem("key")
         });
       }
     </script>
