--- a/play.html
+++ b/play.html
@@ -75,6 +75,30 @@
         <h3 id="info"></h3>
         <h4 id="shot">Shot 1</h4>
         <input id="club" type="text" placeholder="club selection">
+        <select id="club" name="clubs">
+          <option value="" selected>Select Club</option>
+          <option value="D">D</option>
+          <option value="3W">3W</option>
+          <option value="5W">5W</option>
+          <option value="7W">7W</option>
+          <option value="2H">2H</option>
+          <option value="3H">3H</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="PW">PW</option>
+          <option value="GW">GW</option>
+          <option value="AW">AW</option>
+          <option value="LW">LW</option>
+          <option value="P">P</option>
+        </select>
+
+        <!--D, 3W, 5W, 7W, 2H, 3H, 2, 3, 4, 5, 6, 7, 8, 9, PW, GW, AW, LW, P -->
         <button id="shoot">Log Shot</button>
         <p>Strokes (can change manually): </p>
         <input id="strokes" type="number" value="0">
