remove original clubs input

--- a/play.html
+++ b/play.html
@@ -74,7 +74,7 @@
         <h2 id="title">Hole</h2>
         <h3 id="info"></h3>
         <h4 id="shot">Shot 1</h4>
-        <input id="club" type="text" placeholder="club selection">
+        <!--<input id="club" type="text" placeholder="club selection">-->
         <select id="club" name="clubs">
           <option value="" selected>Select Club</option>
           <option value="D">D</option>
