--- a/play.html
+++ b/play.html
@@ -70,6 +70,7 @@
   </head>
   <body>
     <div id="content">
+        <a href="./round.html">Return to Round Select</a>
         <h2 id="course-name">Course Name</h2>
         <h2 id="title">Hole</h2>
         <h3 id="info"></h3>
