buuttons to divs

--- a/play.html
+++ b/play.html
@@ -100,10 +100,10 @@
         </select>
 
         <!--D, 3W, 5W, 7W, 2H, 3H, 2, 3, 4, 5, 6, 7, 8, 9, PW, GW, AW, LW, P -->
-        <button id="shoot">Log Shot</button>
+        <div id="shoot">Log Shot</div>
         <p>Strokes (can change manually): </p>
         <input id="strokes" type="number" value="0">
-        <button id="visible-finish" onclick="return confirm('are you sure?')">Finish Hole</button>
+        <div id="visible-finish" onclick="return confirm('are you sure?')">Finish Hole</div>
         <a id="finish" href="" style="display: none;">Finish Hole</a>
     </div>
     <div id="bottom">
